# catan-game

./: .coverage  .gitignore  .isort.cfg  .pre-commit-config.yaml  index.rst  pyproject.toml  tox.ini
docs/: conf.py  index.rst
docs/_source/: catan.board.rst  catan.rst
notebooks/: graph_bord copy.ipynb  graph_bord.ipynb  types.py
src/catan/: game.py  main.py
src/catan.egg-info/: PKG-INFO  SOURCES.txt
src/catan/board/: __init__.py  developments.py  graph.py  place.py  ressources.py  types.py  victory_points.py
src/catan/bord/: graph.py
src/catan/player/: __init__.py  human.py
tests/: conftest.py  test_game_loop_start.py
tests/bord/: test_create_board.py  test_create_ports.py  test_create_tiles.py  test_develoments.py  test_development_cards.py  test_dice_ressources.py  test_place_building.py  test_place_street.py  test_ressources.py  test_trading.py  test_victory_points.py
